src/assets/stylesheets/utilities/_browser-frame.scss
/* ==========================================================================
   Browser Frame
   ========================================================================== */

$browser-window-height: 30px;
$border-radius: 0.125em;

.browser-frame {
  position: relative;
  margin-bottom: 1.5em;
  padding: calc(#{$browser-window-height} + 1em) 0 0;
  border: 1px solid #ccc;
  border-radius: $border-radius;
  box-shadow: 0 0.25em 1em rgba(#000, 0.25);
  background-color: #fff;

  &::before {
    content: "\2022 \2022 \2022";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: $browser-window-height;
    margin: 0;
    padding: (0.5 * $browser-window-height) 0;
    background: mix(#000, #fff, 25%);
    color: mix(#000, #fff, 50%);
    font-size: (2 * $browser-window-height);
    line-height: 0;
    text-indent: (0.5 * $browser-window-height);
  }

  > * {
    display: block;
    vertical-align: bottom;
    border-radius: 0 0 $border-radius $border-radius;
  }
}

